--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,7 @@ stages:
 
 build:
   stage: build
-  image: docker.nwnx.io:443/beamdog/nwnx_unified:builder
+  image: docker.nwnx.io:443/nwnxee/unified:builder
   script:
     - CC="gcc -m32" CXX="g++ -m32" cmake -DCMAKE_BUILD_TYPE=RelWithDebInfo .
     - make all
