nwnx_object - Add Serialize and Deserialize functions
Make use of Serialize.hpp library.
Include some quick unit tests for it as well
Add Serialize.cpp to CMakeLists.txt

--- a/NWNXLib/CMakeLists.txt
+++ b/NWNXLib/CMakeLists.txt
@@ -16,7 +16,7 @@ macro(nwnxlib_add)
     endif()
 endmacro()
 
-nwnxlib_add("Plugin.cpp")
+nwnxlib_add("Plugin.cpp" "Serialize.cpp")
 
 add_subdirectory(API)
 add_subdirectory(External)
