Fix coding style issues and CMake warning

--- a/Plugins/SQL/CMakeLists.txt
+++ b/Plugins/SQL/CMakeLists.txt
@@ -17,5 +17,5 @@ if (POSTGRESQL_FOUND)
     target_include_directories(SQL PRIVATE "${POSTGRESQL_INCLUDE_DIR}")
     target_link_libraries(SQL ${POSTGRESQL_LIBRARY})
 else (POSTGRESQL_FOUND)
-    message(WARNING "Not compiling with MYSQL support, not found")
+    message(WARNING "Not compiling with PostgreSQL support, not found")
 endif (POSTGRESQL_FOUND)
