NWNX_Events: Add OnCastSpell event hooks.

--- a/Plugins/Events/CMakeLists.txt
+++ b/Plugins/Events/CMakeLists.txt
@@ -7,4 +7,5 @@ add_plugin(Events
     "Events/ExamineEvents.cpp"
     "Events/FeatEvents.cpp"
     "Events/ItemEvents.cpp"
-    "Events/StealthEvents.cpp")
+    "Events/StealthEvents.cpp"
+    "Events/SpellEvents.cpp")
