Remove Repair and Tweaks - the former is a 1.69 plugin for security, and the latter is an empty plugin that does nothing. (If we want Tweaks, we can make a new one when the time comes). Even though Optimizations doesn't compile yet, I also went through and removed the clearly outdated ones.

--- a/Plugins/Optimizations/CMakeLists.txt
+++ b/Plugins/Optimizations/CMakeLists.txt
@@ -1,8 +1,7 @@
-return() # TODO: Upgrade Most of these are unnecessary now. Will we delete this plugin?
+return() # TODO: Make these work when the release schedule is less nuts
 
 add_plugin(Optimizations
     "Optimizations.cpp"
-    "Optimizations/AIMasterOptimizations.cpp"
     "Optimizations/BroadcastCombatStateToPartyOptimization.cpp"
     "Optimizations/CGameObjectArrayOptimization.cpp"
     "Optimizations/GetClientObjectByObjectIdOptimization.cpp"
