--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,7 +52,12 @@ if (${CMAKE_CXX_COMPILER_ID} STREQUAL MSVC)
 # Clang/GCC/Intel/Others
 else()
     if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
-        set(WARNING_FLAGS_CXX "-Weverything -Wno-missing-braces -Wno-c++98-compat -Wno-c++98-compat-pedantic -Wno-padded -Wno-packed -Wno-old-style-cast -Wno-reserved-id-macro -Wno-format-nonliteral -Wno-format-security -Wno-gnu-zero-variadic-macro-arguments -Wno-global-constructors -Wno-exit-time-destructors -Wno-missing-prototypes -Wno-unused-function -Wno-weak-vtables -Wno-missing-noreturn -Wno-non-virtual-dtor -Wno-double-promotion -Wno-covered-switch-default")
+        set(WARNING_FLAGS_CXX "-Weverything -Wno-missing-braces -Wno-c++98-compat -Wno-c++98-compat-pedantic -Wno-padded \
+                               -Wno-packed -Wno-old-style-cast -Wno-reserved-id-macro -Wno-format-nonliteral -Wno-format-security \
+                               -Wno-gnu-zero-variadic-macro-arguments -Wno-global-constructors -Wno-exit-time-destructors \
+                               -Wno-missing-prototypes -Wno-unused-function -Wno-weak-vtables -Wno-missing-noreturn \
+                               -Wno-non-virtual-dtor -Wno-double-promotion -Wno-covered-switch-default -Wno-unused-macros \
+                               -Wno-register")
     else()
         set(WARNING_FLAGS_CXX "-Wall -Wextra")
     endif()
