per-object-storage: new service initial commit
- Map of all objects for custom storage
- Support int,float and string types. Also support custom pointer with a cleanup function.
- Hook CGameObject::~CGameObject to delete storage when the object goes away

.. a lot of cleanup required still..

--- a/NWNXLib/Services/CMakeLists.txt
+++ b/NWNXLib/Services/CMakeLists.txt
@@ -6,5 +6,6 @@ add_subdirectory(Patching)
 add_subdirectory(Plugins)
 add_subdirectory(Tasks)
 add_subdirectory(Messaging)
+add_subdirectory(PerObjectStorage)
 
 nwnxlib_scope()
