events: re-enable DM action events
For now, only notify before and after, no arguments are passed. The events are triggered on the DM object.

--- a/Plugins/Events/CMakeLists.txt
+++ b/Plugins/Events/CMakeLists.txt
@@ -4,7 +4,7 @@ add_plugin(Events
     "Events/AssociateEvents.cpp"
     "Events/ClientEvents.cpp"
     "Events/CombatEvents.cpp"
-    # "Events/DMActionEvents.cpp" TODO: Upgrade
+    "Events/DMActionEvents.cpp"
     "Events/ExamineEvents.cpp"
     "Events/FeatEvents.cpp"
     "Events/ItemEvents.cpp"
