tweaks: add hplimit tweak, part 1

--- a/Plugins/Tweaks/CMakeLists.txt
+++ b/Plugins/Tweaks/CMakeLists.txt
@@ -1,3 +1,4 @@
 add_plugin(Tweaks
     "Tweaks.cpp"
-    "Tweaks/HideClassesOnCharList.cpp")
+    "Tweaks/HideClassesOnCharList.cpp"
+    "Tweaks/PlayerDyingHitPointLimit.cpp")
