Mono: Swap p/invoke calls to use internal calls instead. This is faster and cleaner.

--- a/Plugins/Mono/CMakeLists.txt
+++ b/Plugins/Mono/CMakeLists.txt
@@ -5,7 +5,7 @@ if (PKGCONFIG_FOUND)
 
     if (${MONO_FOUND})
         link_directories(${CMAKE_CURRENT_SOURCE_DIR}/lib)
-        add_plugin(Mono "Mono.cpp")
+        add_plugin(Mono Mono.cpp Mono_Handlers.cpp)
         target_link_libraries(Mono libmono-2.0.a)
         target_include_directories(Mono PUBLIC ${MONO_INCLUDE_DIRS})
         target_compile_options(Mono PUBLIC ${MONO_CFLAGS_OTHER})
