NWNX Spell additions

--- a/Plugins/Spell/CMakeLists.txt
+++ b/Plugins/Spell/CMakeLists.txt
@@ -3,4 +3,5 @@ if(HUNSPELL_FOUND)
 	add_plugin(Spell
 		"Spell.cpp")
 	target_include_directories(Spell PRIVATE "${HUNSPELL_INCLUDE_DIR}")	
+	target_link_libraries(Spell "${HUNSPELL_LIBRARIES}")
 endif(HUNSPELL_FOUND)
