--- a/Plugins/Tweaks/CMakeLists.txt
+++ b/Plugins/Tweaks/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_plugin(Tweaks
     "Tweaks.cpp"
     "Tweaks/HideClassesOnCharList.cpp"
-    "Tweaks/PlayerDyingHitPointLimit.cpp")
+    "Tweaks/PlayerDyingHitPointLimit.cpp"
+    "Tweaks/DisablePause.cpp")
