Emergency fix: Overwrite old BioWare hardcoded address if DNS resolution fails.

--- a/Plugins/Tweaks/CMakeLists.txt
+++ b/Plugins/Tweaks/CMakeLists.txt
@@ -2,4 +2,5 @@ add_plugin(Tweaks
     "Tweaks.cpp"
     "Tweaks/HideClassesOnCharList.cpp"
     "Tweaks/PlayerDyingHitPointLimit.cpp"
-    "Tweaks/DisablePause.cpp")
+    "Tweaks/DisablePause.cpp"
+    "Tweaks/FixMasterServerDNS.cpp")
