Ignore docker folder
The docker folder contains only the Dockerfile for tag :latest-full. No point in having it in the build context.

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,6 +1,7 @@
 # Prevent running COPY layer on Dockerfile changes
 Dockerfile
 .dockerignore
+docker
 
 # Skip everything not needed to build NWNX
 LICENSE
