Use mono version 5.10.0.160

--- a/docker/full/Dockerfile
+++ b/docker/full/Dockerfile
@@ -11,21 +11,25 @@ RUN Scripts/buildnwnx.sh -j $(nproc)
 FROM beamdog/nwserver
 RUN mkdir /nwn/nwnx
 COPY --from=builder /nwnx/home/Binaries/* /nwn/nwnx/
+# Install mono
+ENV MONO_VERSION 5.10.0.160
+RUN apt-get update \
+    && apt-get -y install gnupg2 \
+    && apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 3FA7E0328081BFF6A14DA29AA6A19B38D3D831EF \
+    && apt-get -y install apt-transport-https \
+    && echo "deb http://download.mono-project.com/repo/debian stable-stretch/snapshots/$MONO_VERSION main" > /etc/apt/sources.list.d/mono-official-stable.list \
+    && apt-get update \
+    && apt-get install -y mono-runtime binutils curl mono-devel ca-certificates-mono fsharp mono-vbnc nuget referenceassemblies-pcl \
+    && rm -rf /var/cache/apt /var/lib/apt/lists /tmp/*
 # Create man directive so update-alternatives can successfully configure java
 RUN mkdir -p /usr/share/man/man1
 # Install plugin run dependencies
 RUN runDeps="hunspell \
-    mono-complete \
     openjdk-8-jdk-headless \
     libmariadbclient18 \
     libpq-dev \
     libruby2.3 \
     libssl1.1" \
-    && apt-get update \
-    && apt-get -y install gnupg2 \
-    && apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 3FA7E0328081BFF6A14DA29AA6A19B38D3D831EF \
-    && apt-get -y install apt-transport-https \
-    && echo "deb https://download.mono-project.com/repo/debian stable-stretch main" | tee /etc/apt/sources.list.d/mono-official-stable.list \
     && apt-get update \
     && apt-get -y install --no-install-recommends $runDeps \
     && rm -r /var/cache/apt /var/lib/apt/lists
