--- a/Plugins/Tweaks/CMakeLists.txt
+++ b/Plugins/Tweaks/CMakeLists.txt
@@ -3,4 +3,5 @@ add_plugin(Tweaks
     "Tweaks/HideClassesOnCharList.cpp"
     "Tweaks/PlayerDyingHitPointLimit.cpp"
     "Tweaks/DisablePause.cpp"
-    "Tweaks/FixMasterServerDNS.cpp")
+    "Tweaks/FixMasterServerDNS.cpp"
+    "Tweaks/CompareVarsForMerge.cpp")
