--- a/Docker/Full/Dockerfile
+++ b/Docker/Full/Dockerfile
@@ -49,6 +49,7 @@ ENV NWNX_ADMINISTRATION_SKIP=y \
     NWNX_BEHAVIOURTREE_SKIP=y \
     NWNX_CHAT_SKIP=y \
     NWNX_CREATURE_SKIP=y \
+    NWNX_DAMAGE_SKIP=y \
     NWNX_DATA_SKIP=y \
     NWNX_EVENTS_SKIP=y \
     NWNX_ITEM_SKIP=y \
