Skip Webhook plugin

--- a/Docker/Full/Dockerfile
+++ b/Docker/Full/Dockerfile
@@ -68,4 +68,5 @@ ENV NWNX_ADMINISTRATION_SKIP=y \
     NWNX_TIME_SKIP=y \
     NWNX_TRACKING_SKIP=y \
     NWNX_TWEAKS_SKIP=y \
-    NWNX_WEAPON_SKIP=y
+    NWNX_WEAPON_SKIP=y \
+    NWNX_WEBHOOK_SKIP=y
