Skip Dialog plugin

--- a/Docker/Full/Dockerfile
+++ b/Docker/Full/Dockerfile
@@ -51,6 +51,7 @@ ENV NWNX_ADMINISTRATION_SKIP=y \
     NWNX_CREATURE_SKIP=y \
     NWNX_DAMAGE_SKIP=y \
     NWNX_DATA_SKIP=y \
+    NWNX_DIALOG_SKIP=y \
     NWNX_EVENTS_SKIP=y \
     NWNX_ITEM_SKIP=y \
     NWNX_JVM_SKIP=y \
