commands: Add service plumbing

--- a/NWNXLib/Services/CMakeLists.txt
+++ b/NWNXLib/Services/CMakeLists.txt
@@ -7,5 +7,6 @@ add_subdirectory(Plugins)
 add_subdirectory(Tasks)
 add_subdirectory(Messaging)
 add_subdirectory(PerObjectStorage)
+add_subdirectory(Commands)
 
 nwnxlib_scope()
