Removed CombatModeEvents since it's handled by NWNX_CombatModes now

--- a/Plugins/Events/CMakeLists.txt
+++ b/Plugins/Events/CMakeLists.txt
@@ -10,5 +10,4 @@ add_plugin(Events
     "Events/StealthEvents.cpp"
     "Events/SpellEvents.cpp"
     "Events/PartyEvents.cpp"
-    "Events/HealerKitEvents.cpp"
-    "Events/CombatModeEvents.cpp")
+    "Events/HealerKitEvents.cpp")
