Adding NWNX_Rename to the Docker skip list.

--- a/Docker/Full/Dockerfile
+++ b/Docker/Full/Dockerfile
@@ -63,6 +63,7 @@ ENV NWNX_ADMINISTRATION_SKIP=y \
     NWNX_PROFILER_SKIP=y \
     NWNX_SPELLCHECKER_SKIP=y \
     NWNX_REDIS_SKIP=y \
+	NWNX_RENAME_SKIP=y \
     NWNX_RUBY_SKIP=y \
     NWNX_SQL_SKIP=y \
     NWNX_THREADWATCHDOG_SKIP=y \
