Add libsqlite3-dev to dockerfile deps

--- a/Docker/Full/Dockerfile
+++ b/Docker/Full/Dockerfile
@@ -29,6 +29,7 @@ RUN runDeps="hunspell \
     openjdk-8-jdk-headless \
     libmariadbclient18 \
     libpq-dev \
+    libsqlite3-dev \
     libruby2.3 \
     luajit libluajit-5.1 \
     libssl1.1" \
