Events: InventoryEvents initial implementation

--- a/Plugins/Events/CMakeLists.txt
+++ b/Plugins/Events/CMakeLists.txt
@@ -15,4 +15,5 @@ add_plugin(Events
     "Events/SkillEvents.cpp"
     "Events/PolymorphEvents.cpp"
     "Events/EffectEvents.cpp"
-    "Events/QuickChatEvents.cpp")
+    "Events/QuickChatEvents.cpp"
+    "Events/InventoryEvents.cpp")
