--- a/Plugins/Events/CMakeLists.txt
+++ b/Plugins/Events/CMakeLists.txt
@@ -17,4 +17,5 @@ add_plugin(Events
     "Events/PolymorphEvents.cpp"
     "Events/EffectEvents.cpp"
     "Events/QuickChatEvents.cpp"
-    "Events/InventoryEvents.cpp")
+    "Events/InventoryEvents.cpp"
+    "Events/TrapEvents.cpp")
