--- a/NWNXLib/API/CMakeLists.txt
+++ b/NWNXLib/API/CMakeLists.txt
@@ -4,5 +4,5 @@ elseif(UNIX)
     set(APIDIR "Linux")
 endif()
 
-nwnxlib_add("Globals.cpp" "${APIDIR}/API/UnityBuild.cpp")
+#nwnxlib_add("Globals.cpp" "${APIDIR}/API/UnityBuild.cpp")
 set(APIDIR ${CMAKE_CURRENT_SOURCE_DIR}/${APIDIR} PARENT_SCOPE)
