--- a/Plugins/Events/CMakeLists.txt
+++ b/Plugins/Events/CMakeLists.txt
@@ -20,4 +20,5 @@ add_plugin(Events
     "Events/InventoryEvents.cpp"
     "Events/TrapEvents.cpp"
     "Events/TimingBarEvents.cpp"
-    "Events/LevelEvents.cpp")
+    "Events/LevelEvents.cpp"
+    "Events/PVPEvents.cpp")
