--- a/Plugins/Tweaks/CMakeLists.txt
+++ b/Plugins/Tweaks/CMakeLists.txt
@@ -11,5 +11,6 @@ add_plugin(Tweaks
     "Tweaks/HideDMsOnCharList.cpp"
     "Tweaks/DisableMonkAbilitiesWhenPolymorphed.cpp"
     "Tweaks/StringToIntBaseToAuto.cpp"
+    "Tweaks/MaxLevel.cpp"
     "Tweaks/DeadCreatureFiresOnAreaExit.cpp"
 )
