--- a/Plugins/Tweaks/CMakeLists.txt
+++ b/Plugins/Tweaks/CMakeLists.txt
@@ -13,4 +13,5 @@ add_plugin(Tweaks
     "Tweaks/StringToIntBaseToAuto.cpp"
     "Tweaks/DeadCreatureFiresOnAreaExit.cpp"
     "Tweaks/PreserveActionsOnDMPossess.cpp"
+    "Tweaks/MaxLevel.cpp"
 )
