--- a/Plugins/Tweaks/CMakeLists.txt
+++ b/Plugins/Tweaks/CMakeLists.txt
@@ -12,4 +12,5 @@ add_plugin(Tweaks
     "Tweaks/DisableMonkAbilitiesWhenPolymorphed.cpp"
     "Tweaks/StringToIntBaseToAuto.cpp"
     "Tweaks/DeadCreatureFiresOnAreaExit.cpp"
+    "Tweaks/PreserveActionsOnDMPossess.cpp"
 )
