New Tweak: Preserve actions on DM possess
Preserves action list on DM possession

--- a/Plugins/Tweaks/CMakeLists.txt
+++ b/Plugins/Tweaks/CMakeLists.txt
@@ -11,4 +11,5 @@ add_plugin(Tweaks
     "Tweaks/HideDMsOnCharList.cpp"
     "Tweaks/DisableMonkAbilitiesWhenPolymorphed.cpp"
     "Tweaks/StringToIntBaseToAuto.cpp"
+    "Tweaks/PreserveActionsOnDMPossess.cpp"
 )
