--- a/Plugins/Tweaks/CMakeLists.txt
+++ b/Plugins/Tweaks/CMakeLists.txt
@@ -11,6 +11,7 @@ add_plugin(Tweaks
     "Tweaks/HideDMsOnCharList.cpp"
     "Tweaks/DisableMonkAbilitiesWhenPolymorphed.cpp"
     "Tweaks/StringToIntBaseToAuto.cpp"
+    "Tweaks/PreserveActionsOnDMPossess.cpp"
     "Tweaks/MaxLevel.cpp"
     "Tweaks/DeadCreatureFiresOnAreaExit.cpp"
 )
