Added FixGreaterSanctuaryBug to Tweak plugin

--- a/Plugins/Tweaks/CMakeLists.txt
+++ b/Plugins/Tweaks/CMakeLists.txt
@@ -15,4 +15,5 @@ add_plugin(Tweaks
     "Tweaks/MaxLevel.cpp"
     "Tweaks/DeadCreatureFiresOnAreaExit.cpp"
     "Tweaks/PreserveActionsOnDMPossess.cpp"
+    "Tweaks/FixGreaterSanctuaryBug.cpp"
 )
