Project updates for doxygenizing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -94,6 +94,9 @@ add_subdirectory(NWNXLib)
 # The core shared library.
 add_subdirectory(Core)
 
+# The documentation generation.
+add_subdirectory(docgen)
+
 # Detect every plugin and store it in plugins . . .
 file(GLOB plugins Plugins/*/CMakeLists.txt)
 
@@ -113,3 +116,4 @@ endforeach(plugin)
 foreach(addplugin $ENV{NWNX_ADDITIONAL_PLUGINS})
     add_subdirectory(${addplugin} ${CMAKE_CURRENT_SOURCE_DIR}/Binaries)
 endforeach(addplugin)
+
