--- a/docgen/CMakeLists.txt
+++ b/docgen/CMakeLists.txt
@@ -16,6 +16,7 @@ if(DOXYGEN_FOUND)
     set(DOXYGEN_STRIP_FROM_PATH ${CMAKE_SOURCE_DIR}/)
     set(DOXYGEN_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/Documentation)
     set(DOXYGEN_HTML_OUTPUT light)
+    set(DOXYGEN_HTML_FOOTER ${CMAKE_SOURCE_DIR}/docgen/html_light_footer.html)
     # Run "make docs" to create the doxygen documentation
     doxygen_add_docs(
             docs
@@ -26,6 +27,7 @@ if(DOXYGEN_FOUND)
     set(DOXYGEN_HTML_EXTRA_STYLESHEET ${CMAKE_SOURCE_DIR}/docgen/custom.css;
                                       ${CMAKE_SOURCE_DIR}/docgen/custom_dark_theme.css)
     set(DOXYGEN_HTML_OUTPUT dark)
+    set(DOXYGEN_HTML_FOOTER ${CMAKE_SOURCE_DIR}/docgen/html_dark_footer.html)
     doxygen_add_docs(
             dark-docs
             ${CMAKE_SOURCE_DIR}
