--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -87,6 +87,10 @@ workflows:
           requires:
             - build
             - docs-build
+          filters:
+            branches:
+              only:
+                - master      
       - deploy:
           requires:
             - build
