--- a/docgen/CMakeLists.txt
+++ b/docgen/CMakeLists.txt
@@ -3,6 +3,9 @@ cmake_policy(SET CMP0054 NEW)
 # Look for Doxygen package
 find_package(Doxygen)
 if(DOXYGEN_FOUND)
+    set(DOXYGEN_PROJECT_NAME NWNX:EE)
+    set(DOXYGEN_PROJECT_NUMBER 8186)
+    set(DOXYGEN_PROJECT_LOGO ${CMAKE_SOURCE_DIR}/docgen/logo-transparent.png)
     set(DOXYGEN_LAYOUT_FILE ${CMAKE_SOURCE_DIR}/docgen/DoxygenLayout.xml)
     set(DOXYGEN_FILE_PATTERNS *.nss;*.md)
     set(DOXYGEN_EXCLUDE_PATTERNS */*-nwnx/*; */Plugins/*/NWScript/*_t.nss; */Plugins/*/NWScript/*_t?.nss;
@@ -10,6 +13,7 @@ if(DOXYGEN_FOUND)
                                  */Plugins/Redis/cpp_redis)
     set(DOXYGEN_EXTENSION_MAPPING nss=C++)
     set(DOXYGEN_DISABLE_INDEX YES)
+    set(DOXYGEN_SOURCE_BROWSER YES)
     set(DOXYGEN_GENERATE_TREEVIEW YES)
     set(DOXYGEN_INCLUDE_GRAPH NO)
     set(DOXYGEN_SORT_MEMBER_DOCS NO)
