Utils: Add some string utilities.
Most of these are copied from other code around the code base.

--- a/NWNXLib/CMakeLists.txt
+++ b/NWNXLib/CMakeLists.txt
@@ -23,6 +23,7 @@ add_subdirectory(External)
 add_subdirectory(Hooking)
 add_subdirectory(Platform)
 add_subdirectory(Services)
+add_subdirectory(Utils)
 
 add_library(NWNXLib STATIC "${NWNXLIB_SOURCE}")
 add_sanitizers(NWNXLib)
