--- a/docgen/CMakeLists.txt
+++ b/docgen/CMakeLists.txt
@@ -17,11 +17,14 @@ if(DOXYGEN_FOUND)
     set(DOXYGEN_GENERATE_TREEVIEW YES)
     set(DOXYGEN_INCLUDE_GRAPH NO)
     set(DOXYGEN_SORT_MEMBER_DOCS NO)
+    set(DOXYGEN_QUIET YES)
+    set(DOXYGEN_EXTRACT_ALL YES)
     set(DOXYGEN_STRIP_FROM_PATH ${CMAKE_SOURCE_DIR}/)
     set(DOXYGEN_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/Documentation)
     set(DOXYGEN_HTML_OUTPUT light)
     set(DOXYGEN_HTML_HEADER ${CMAKE_SOURCE_DIR}/docgen/html_header.html)
     set(DOXYGEN_HTML_FOOTER ${CMAKE_SOURCE_DIR}/docgen/html_light_footer.html)
+    set(DOXYGEN_HTML_EXTRA_STYLESHEET ${CMAKE_SOURCE_DIR}/docgen/custom.css)
     # Run "make docs" to create the doxygen documentation
     doxygen_add_docs(
             docs
@@ -29,8 +32,7 @@ if(DOXYGEN_FOUND)
             WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/docgen
             COMMENT "Generate API-documents."
     )
-    set(DOXYGEN_HTML_EXTRA_STYLESHEET ${CMAKE_SOURCE_DIR}/docgen/custom.css;
-                                      ${CMAKE_SOURCE_DIR}/docgen/custom_dark_theme.css)
+    set(DOXYGEN_HTML_EXTRA_STYLESHEET ${CMAKE_SOURCE_DIR}/docgen/custom_dark_theme.css)
     set(DOXYGEN_HTML_OUTPUT dark)
     set(DOXYGEN_HTML_FOOTER ${CMAKE_SOURCE_DIR}/docgen/html_dark_footer.html)
     doxygen_add_docs(
