--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,7 +30,7 @@ jobs:
       - attach_workspace:
           at: ~/nwnxee
       - checkout
-      - run: CC="gcc-7 -m64" CXX="g++-7 -m64" cmake -DCMAKE_BUILD_TYPE=RelWithDebInfo .
+      - run: CC="gcc-7" CXX="g++-7" cmake -DCMAKE_BUILD_TYPE=RelWithDebInfo .
       - run: make docs
       - run: make dark-docs
       - persist_to_workspace:
