Events: add skippable Lock/Unlock object events

--- a/Plugins/Events/CMakeLists.txt
+++ b/Plugins/Events/CMakeLists.txt
@@ -23,4 +23,5 @@ add_plugin(Events
     "Events/LevelEvents.cpp"
     "Events/PVPEvents.cpp"
     "Events/InputEvents.cpp"
-    "Events/MaterialChangeEvents.cpp")
+    "Events/MaterialChangeEvents.cpp"
+    "Events/ObjectEvents.cpp")
