experimental: ridiculously low level GameObjectArray optimizations

--- a/Plugins/Experimental/CMakeLists.txt
+++ b/Plugins/Experimental/CMakeLists.txt
@@ -2,4 +2,5 @@ add_plugin(Experimental
         "Experimental.cpp"
         "Experimentals/SuppressPlayerLoginInfo.cpp"
         "Experimentals/AsyncLogFlush.cpp"
+        "Experimentals/OptimizeGOA.cpp"
 )
