Optimizations: add ObjectTagLookup optimization

--- a/Plugins/Optimizations/CMakeLists.txt
+++ b/Plugins/Optimizations/CMakeLists.txt
@@ -2,4 +2,5 @@ add_plugin(Optimizations
         "Optimizations.cpp"
         "Optimizations/AsyncLogFlush.cpp"
         "Optimizations/GameObjectLookup.cpp"
+        "Optimizations/ObjectTagLookup.cpp"
 )
