Change cost for items with charges

--- a/Plugins/Tweaks/CMakeLists.txt
+++ b/Plugins/Tweaks/CMakeLists.txt
@@ -15,4 +15,5 @@ add_plugin(Tweaks
     "Tweaks/PreserveActionsOnDMPossess.cpp"
     "Tweaks/FixGreaterSanctuaryBug.cpp"
     "Tweaks/FixScrollLearningBug.cpp"
+    "Tweaks/ItemChargesCost.cpp"
 )
