Adjust caster level

--- a/Plugins/Tweaks/CMakeLists.txt
+++ b/Plugins/Tweaks/CMakeLists.txt
@@ -16,4 +16,5 @@ add_plugin(Tweaks
     "Tweaks/FixGreaterSanctuaryBug.cpp"
     "Tweaks/FixScrollLearningBug.cpp"
     "Tweaks/ItemChargesCost.cpp"
+    "Tweaks/AdjustCasterLevel.cpp"
 )
