Events: add ResourceEvents

--- a/Plugins/Events/CMakeLists.txt
+++ b/Plugins/Events/CMakeLists.txt
@@ -25,4 +25,5 @@ add_plugin(Events
     "Events/InputEvents.cpp"
     "Events/MaterialChangeEvents.cpp"
     "Events/ObjectEvents.cpp"
-    "Events/UUIDEvents.cpp")
+    "Events/UUIDEvents.cpp"
+    "Events/ResourceEvents.cpp")
