Events: add QuickbarSetButton event to QuickbarEvents

--- a/Plugins/Events/CMakeLists.txt
+++ b/Plugins/Events/CMakeLists.txt
@@ -26,4 +26,5 @@ add_plugin(Events
     "Events/MaterialChangeEvents.cpp"
     "Events/ObjectEvents.cpp"
     "Events/UUIDEvents.cpp"
-    "Events/ResourceEvents.cpp")
+    "Events/ResourceEvents.cpp"
+    "Events/QuickbarEvents.cpp")
