--- a/Plugins/Events/CMakeLists.txt
+++ b/Plugins/Events/CMakeLists.txt
@@ -2,6 +2,7 @@ add_plugin(Events
     "Events.cpp"
     "Events/AssociateEvents.cpp"
     "Events/BarterEvents.cpp"
+    "Events/CalendarEvents.cpp"
     "Events/ClientEvents.cpp"
     "Events/CombatEvents.cpp"
     "Events/DMActionEvents.cpp"
