--- a/Plugins/Tweaks/CMakeLists.txt
+++ b/Plugins/Tweaks/CMakeLists.txt
@@ -15,4 +15,6 @@ add_plugin(Tweaks
     "Tweaks/PreserveActionsOnDMPossess.cpp"
     "Tweaks/FixGreaterSanctuaryBug.cpp"
     "Tweaks/ItemChargesCost.cpp"
+    "Tweaks/FixDispelEffectLevels.cpp"
+    "Tweaks/AddPrestigeclassCasterLevels.cpp"
 )
