Don't add cpp_redis includes to global include directories

--- a/Plugins/Redis/CMakeLists.txt
+++ b/Plugins/Redis/CMakeLists.txt
@@ -1,5 +1,4 @@
 add_subdirectory(cpp_redis)
-include_directories(cpp_redis/includes)
 
 add_plugin(Redis
   Redis.cpp
@@ -9,4 +8,5 @@ add_plugin(Redis
   PubSub.cpp
 )
 
+target_include_directories(Redis PRIVATE cpp_redis/includes)
 target_link_libraries(Redis cpp_redis)
