Don't expose anything publicly that needn't be

--- a/NWNXLib/External/funchook/CMakeLists.txt
+++ b/NWNXLib/External/funchook/CMakeLists.txt
@@ -15,7 +15,7 @@ else ()
 endif ()
 
 add_library(distorm ${LINKING} ${DISTORM_SOURCES})
-target_include_directories(distorm PUBLIC ${DISTORM_PATH}/include)
+target_include_directories(distorm PRIVATE ${DISTORM_PATH}/include)
 
 set(FUNCHOOK_SRC_DIR src/)
 set(FUNCHOOK_SOURCES src/funchook.c src/funchook_io.c src/funchook_x86.c src/os_func.c src/printf_base.c)
@@ -31,4 +31,4 @@ if (MINGW)
 else ()
     target_link_libraries(funchook PUBLIC distorm dl)
 endif ()
-target_include_directories(funchook PUBLIC include)
+target_include_directories(funchook PRIVATE include ${DISTORM_PATH}/include)
