Added fix to prevent unlimited uses of potions/scrolls

--- a/Plugins/Tweaks/CMakeLists.txt
+++ b/Plugins/Tweaks/CMakeLists.txt
@@ -17,4 +17,5 @@ add_plugin(Tweaks
     "Tweaks/ItemChargesCost.cpp"
     "Tweaks/FixDispelEffectLevels.cpp"
     "Tweaks/AddPrestigeclassCasterLevels.cpp"
+    "Tweaks/FixUnlimitedPotionsBug.cpp"
 )
