--- a/Plugins/Tweaks/CMakeLists.txt
+++ b/Plugins/Tweaks/CMakeLists.txt
@@ -20,4 +20,5 @@ add_plugin(Tweaks
     "Tweaks/FixUnlimitedPotionsBug.cpp"
     "Tweaks/UnhardcodeShields.cpp"
     "Tweaks/BlockDMSpawnItem.cpp"
+    "Tweaks/FixArmorDexBonusUnderOne.cpp"
 )
