--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -12,13 +12,13 @@ jobs:
     # well on Windows or Mac.  You can convert this to a matrix build if you need
     # cross-platform coverage.
     # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
-    runs-on: ubuntu-latest
-
+    runs-on: ubuntu-20.04
+    
     steps:
     - uses: actions/checkout@v2
     
     - name: Install Additional packages
-      run: sudo apt-get install libhunspell-dev libmagick++-6.q16-dev graphviz libluajit-5.1-dev doxygen
+      run: sudo apt-get install libhunspell-dev libmagick++-6.q16-dev graphviz libluajit-5.1-dev doxygen gcc-7 g++-7
 
     - name: Create Build Environment
       # Some projects don't allow in-source building, so create a separate build directory
@@ -39,7 +39,7 @@ jobs:
       working-directory: ${{runner.workspace}}/build
       shell: bash
       # Execute the build.  You can specify a specific target with "--target <NAME>"
-      run: cmake --build . --config $BUILD_TYPE
+      run: CC="gcc-7 -m64" CXX="g++-7 -m64" cmake --build . --config $BUILD_TYPE -- -j 3
     
     - name: Make Docs
       working-directory: ${{runner.workspace}}/build
